kubernetes/svc-lb/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname
spec:
  ports:
  - port: 80
    name: host1
    protocol: TCP
    targetPort: 80
  selector:
    run: hostname2
  sessionAffinity: None
  type: LoadBalancer
  externalTrafficPolicy: Local
