kubernetes/svc-lb/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostname
spec:
  backend:
    serviceName: hostname
    servicePort: 80
